Updated application path for testing site with minified timeonsitetracker.js snippet

--- a/src/public/minified/index.html
+++ b/src/public/minified/index.html
@@ -24,8 +24,8 @@ var Tos;
             },
             developerMode: true,
             TOSCookie: {
-                path: '/',
-                //domain: ((window.location.hostname) ? 'localhost' : ('.' + window.location.hostname))
+                path: '/static/minified',
+                domain: 'localhost'
             }
         };
         if(TimeOnSiteTracker) {
