--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 
                 <p>
                     <a href="docs/index.html">Getting Started</a><br/>
-                    <a href="#">Reporting application in PHP/NodeJs</a><br/>
+                    <a href="v1/index.html">Reporting application in PHP/NodeJs</a><br/>
+                    <a href="#licenceFreeVersions">Buy Licence/Use it free</a><br/>
                 </p>
 
                 <ul>
@@ -220,6 +221,34 @@
                 <p>
                     <h2>Reports Dashboard</h2>
                     <img id="tosReportingImg" src='images/tos_reports.png' style="width: 100%;cursor: pointer;" alt='Time on site reports'/>
+                </p>
+
+                <p>
+                    <h2 id="licenseFreeVersions">Licensed & Free version</h2>
+                    <h4>Free Version</h4>
+                    <p>
+                        TimeOnSite Tracker can be used for free without purchasing a licence key in following cases:
+                        <ul>
+                            <li>Using it in non-production environments like development, test, stage etc. (ex. <strong>http://testing.example.com</strong>)</li> and for testing purposes
+                            <li>It's free to use for non-profit organizations and educational universities</li>
+                        </ul>
+                    </p>
+
+                    <h4>Licensed Version</h4>
+                    <p>
+                        TimeOnSiteTracker.js is strictly commercial software. Using it in live/production servers and environments (ex. <strong>http://example.com</strong>) require that you purchase licence key. It's illegal to use without a valid licence key. The tracker snippet itself will contain licence key to ensure that it's valid.
+                        <ul>
+                            <li>The <strong>cost of licence is $38</strong> per year as of <script>document.write((new Date()).getFullYear())</script>.</li>
+                            <li>The licence is <strong>website domain-specific</strong>. It's not specific to no. of users/products like other commercial software. Any no. of users/applications under a single domain (ex. <strong>http://example.com</strong>) can use the purchased software.</li>
+                            
+                            <li>Visit this page and enter your website/app information and <a target="_blank" href="https://www.paypal.me/saleemkce/38usd">pay with Paypal</a>. This license is valid for 1 year from the date of purchase. Once a year completes, you need to pay successive year for continued use. Licence key will be sent to your registered email id and is tagged with your domain name. This means you will have single license key mapped with your site as long as you wish to use. If you don't wish to use the software, you could stop paying for it.</li>
+
+                            <li>
+                                Valid licence key looks like the following, for example,<br/>
+                                <img src='images/licencekey_sample.png' style="margin: 5px;" alt='Licence key TimeOnSite Tracker'/>
+                            </li>
+                        </ul>
+                    </p>
                 </p>
             </section>
 
