Added link to app registration and purchase licence page

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
                 <p>
                     <a href="docs/index.html">Getting Started</a><br/>
-                    <a href="v1/index.html">Reporting application in PHP/NodeJs</a><br/>
-                    <a href="#licenceFreeVersions">Buy Licence/Use it free</a><br/>
+                    <a href="v1/backend.html">Reporting application in PHP/NodeJs</a><br/>
+                    <a href="#licensedAndFreeVersions">Buy Licence/Use it free</a><br/>
                 </p>
 
                 <ul>
@@ -224,31 +224,50 @@
                 </p>
 
                 <p>
-                    <h2 id="licenseFreeVersions">Licensed & Free version</h2>
+                    <h2 id="licensedAndFreeVersions">Licensed & Free version</h2>
                     <h4>Free Version</h4>
                     <p>
                         TimeOnSite Tracker can be used for free without purchasing a licence key in following cases:
                         <ul>
                             <li>Using it in non-production environments like development, test, stage etc. (ex. <strong>http://testing.example.com</strong>)</li> and for testing purposes
-                            <li>It's free to use for non-profit organizations and educational universities</li>
+                            <li>It's free to use for non-profit organizations and educational universities but it cannot be embedded in other open-source software or
+                             libraries.</li>
                         </ul>
                     </p>
 
                     <h4>Licensed Version</h4>
                     <p>
-                        TimeOnSiteTracker.js is strictly commercial software. Using it in live/production servers and environments (ex. <strong>http://example.com</strong>) require that you purchase licence key. It's illegal to use without a valid licence key. The tracker snippet itself will contain licence key to ensure that it's valid.
+                        TimeOnSiteTracker.js is <strong>strictly commercial software</strong>. Using it in live/production servers and environments (ex. <strong>http://example.com</strong>) require that you purchase licence key. It's illegal to use without a valid licence key. The tracker snippet itself has to contain licence key to ensure that it's valid.
                         <ul>
                             <li>The <strong>cost of licence is $38</strong> per year as of <script>document.write((new Date()).getFullYear())</script>.</li>
                             <li>The licence is <strong>website domain-specific</strong>. It's not specific to no. of users/products like other commercial software. Any no. of users/applications under a single domain (ex. <strong>http://example.com</strong>) can use the purchased software.</li>
                             
-                            <li>Visit this page and enter your website/app information and <a target="_blank" href="https://www.paypal.me/saleemkce/38usd">pay with Paypal</a>. This license is valid for 1 year from the date of purchase. Once a year completes, you need to pay successive year for continued use. Licence key will be sent to your registered email id and is tagged with your domain name. This means you will have single license key mapped with your site as long as you wish to use. If you don't wish to use the software, you could stop paying for it.</li>
+                            <li>Follow the instructions below for your site/app registration and buying licence. This license is valid for 1 year from the date of purchase. Once a year completes, you need to pay successive year for continued use. Licence key will be sent to your registered email id and is tagged with your domain name. This means you will have single license key mapped with your website as long as you wish to use. If you don't wish to use the software, you could stop paying for it.</li>
 
                             <li>
                                 Valid licence key looks like the following, for example,<br/>
                                 <img src='images/licencekey_sample.png' style="margin: 5px;" alt='Licence key TimeOnSite Tracker'/>
                             </li>
                         </ul>
+
+                        <h3>Buy licence now?</h3>
+                        <p>
+                            <span>Buying licence is a two-step process as given here</span>
+                            <ul>
+                                <li><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd3yxZBSlnvOv1LKf5PgQd9hbWDdAtW4dWItUzE7CKoWsMJLQ/viewform">Register your application(website)</a></li>
+                                <li><a target="_blank" href="https://www.paypal.me/saleemkce/38usd">Pay with Paypal</a> (mention your company/entity name in remarks/message box at the time of payment)</li>
+                            </ul>
+
+                            <div>Registering your application and paying can be done in any order. When you press pay button and your payment is successful, your payment time is recorded and you can continue to use the software for next 1 year.<br/><br/></div>
+
+                            <div>We would generate a licence and send to your email available via step 1. It may take from 1 week to 10 days for us to generate and send your licence key. But you could start using the software from the moment you made the purchase. <a target="_blank" href="https://github.com/saleemkce/timeonsite">Download the software</a> <strong>timeonsitetracker.js</strong> or minified version and use it in your application. When we send your licence key via email, copy it and you have to manually overwrite the <strong>Licence Key: {your-license-key-here}</strong> line in software as given in image above.<br/><br/></div>
+
+                            <div><strong>Note:</strong> Money paid is not refundable even if you use it for 3 months and leave it in the rest of the year.</div>
+                        </p>
                     </p>
+                </p>
+
+                <p class="tos_development_info_bottom">Developed with love for web & analytics at <a href="https://en.wikipedia.org/wiki/Chennai">Chennai</a>, remember <a href="https://en.wikipedia.org/wiki/Marina_Beach">Marina</a>? All praise be to Almighty God.<br/>TimeonsiteTracker.js, the commercial software.
                 </p>
             </section>
 
