--- a/v1/backend.html
+++ b/v1/backend.html
@@ -381,8 +381,9 @@ Body:
 </pre>
                 <p>In HTTP client like Postman, you could test if your route works before applying the code in your application.</p>
 
-
-
+                <p class="tos_development_info_bottom">Developed with love for web & analytics at <a href="https://en.wikipedia.org/wiki/Chennai">Chennai</a>, remember <a href="https://en.wikipedia.org/wiki/Marina_Beach">Marina</a>? All praise be to Almighty God.<br/>TimeonsiteTracker.js, the commercial software.
+                </p>
+                
             </section>
             <footer>
                 <p>This project is maintained by <a href="https://github.com/saleemkce">saleemkce</a></p>
