Added favicon image and support for issues

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="keywords" content="timeonsite tracker, timeonsite intro, timeonsite web">
         <meta name="robot" content="index,follow">
         <title>Timeonsite Tracker</title>
+        <link rel="icon" type="image/ico" href="images/tos_favicon.ico" sizes="16x16">
 
         <link rel="stylesheet" href="stylesheets/styles.css">
         <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -138,10 +139,8 @@
                 <img src='images/tos_reports.png' style="margin: 5px;" alt='Time on site reports'/>
             </div>
 
-            <section class="coverImg">
-                <div class="text">
-                    Time On Site Tracker
-                </div>
+            <section>
+                <img src='images/tos_coverimg.png' />
             </section>
 
             <section>
@@ -262,7 +261,9 @@
 
                             <div>We would generate a licence and send to your email available via step 1. It may take from 1 week to 10 days for us to generate and send your licence key. But you could start using the software from the moment you made the purchase. <a target="_blank" href="https://github.com/saleemkce/timeonsite">Download the software</a> <strong>timeonsitetracker.js</strong> or minified version and use it in your application. When we send your licence key via email, copy it and you have to manually overwrite the <strong>Licence Key: {your-license-key-here}</strong> line in software as given in image above.<br/><br/></div>
 
-                            <div><strong>Note:</strong> Money paid is not refundable even if you use it for 3 months and leave it in the rest of the year.</div>
+                            <div><strong>Note:</strong> Money paid is not refundable even if you use it for 3 months and leave it in the rest of the year.<br/><br/></div>
+
+                            <div><strong>Support: </strong>If you did not receive licence key even after 10 days from the date of payment or have any payment issues, <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSccM7md9rcalJOy-OhmWbrFtc0tN-AlZWKXipkU_4B4vSgM3g/viewform">contact us and get support</a></div>
                         </p>
                     </p>
                 </p>
