--- a/v1/backend.html
+++ b/v1/backend.html
@@ -9,6 +9,7 @@
     <meta name="robot" content="index,follow">
     <title>TimeonsiteTracker (TOS) - Saving TOS to database</title>
 
+    <link rel="icon" type="image/ico" href="../images/tos_favicon.ico" sizes="16x16">
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/github-light.css">
 
@@ -44,11 +45,9 @@
                 </ul>
             </header>
 
-            <section class="coverImg">
-                <div class="text">
-                    Time On Site Tracker
-                </div>
-              </section>
+            <section>
+                <img src='../images/tos_coverimg.png' />
+            </section>
 
             <section>
             
