Organized file structure and updated analytics image

--- a/index.html
+++ b/index.html
@@ -92,8 +92,14 @@
                 $("#tosReportingImg").on('click', function() {
                      $(".overlay").css('display', 'block');
                 });
+                $("#tosReportingImg1").on('click', function() {
+                     $(".overlay1").css('display', 'block');
+                });
 
                 $(".overlay").on('click', function() {
+                    $(this).css('display', 'none');
+                });
+                $(".overlay1").on('click', function() {
                     $(this).css('display', 'none');
                 });
 
@@ -118,7 +124,7 @@
 
                 <p>
                     <a href="docs/index.html">Getting Started</a><br/>
-                    <a href="v1/backend.html">Reporting application in PHP/NodeJs</a><br/>
+                    <a href="backend/index.html">Reporting Dashboard in PHP/NodeJs</a><br/>
                     <a href="#licensedAndFreeVersions">Buy Licence/Use it free</a><br/>
                 </p>
 
@@ -136,7 +142,14 @@
             </header>
 
             <div class="overlay">
-                <img src='images/tos_reports.png' style="margin: 5px;" alt='Time on site reports'/>
+                <p>
+                    <img src='images/tos_reports.png' style="margin: 5px;" alt='Time on site reports'/>
+                </p>
+            </div>
+             <div class="overlay1">
+                <p>
+                    <img src='images/tos_analytics.png' style="margin: 5px;" alt='Time on site analytics'/>
+                </p>
             </div>
 
             <section>
@@ -218,8 +231,15 @@
                 </span>
                 </p> -->
                 <p>
-                    <h2>Reports Dashboard</h2>
-                    <img id="tosReportingImg" src='images/tos_reports.png' style="width: 100%;cursor: pointer;" alt='Time on site reports'/>
+                    <h2 style="text-decoration:dashed underline;">Reports & Analytics Dashboard <span class="download-app-info"><a href="https://github.com/saleemkce/visual">(Download it for free)</a></span></h2>
+                    <p>
+                        <h2>Reports Dashboard</h2>
+                        <img id="tosReportingImg" src='images/tos_reports.png' style="width: 100%;cursor: pointer;" alt='Time on site reports'/>
+                    </p>
+                    <p>
+                        <h2>Analytics Dashboard</h2>
+                        <img id="tosReportingImg1" src='images/tos_analytics.png' style="width: 100%;cursor: pointer;" alt='Time on site analytics'/>
+                    </p>
                 </p>
 
                 <p>
@@ -257,11 +277,11 @@
                                 <li><a target="_blank" href="https://www.paypal.me/saleemkce/38usd">Pay with Paypal</a> (mention your company/entity name in remarks/message box at the time of payment)</li>
                             </ul>
 
-                            <div>Registering your application and paying can be done in any order. When you press pay button and your payment is successful, your payment time is recorded and you can continue to use the software for next 1 year.<br/><br/></div>
+                            <div>Registering your application and paying can be done in any order. When you press pay button and your payment is successful, your payment time (at Paypal) is recorded and you can continue to use the software for next 1 year.<br/><br/></div>
 
-                            <div>We would generate a licence and send to your email available via step 1. It may take from 1 week to 10 days for us to generate and send your licence key. But you could start using the software from the moment you made the purchase. <a target="_blank" href="https://github.com/saleemkce/timeonsite">Download the software</a> <strong>timeonsitetracker.js</strong> or minified version and use it in your application. When we send your licence key via email, copy it and you have to manually overwrite the <strong>Licence Key: {your-license-key-here}</strong> line in software as given in image above.<br/><br/></div>
+                            <div>We would generate a licence key and send to your email available via step 1. It may take from 1 week to 10 days for us to generate and send your licence key. But you could start using the software from the moment you made the purchase. <a target="_blank" href="https://github.com/saleemkce/timeonsite">Download the software</a> <strong>timeonsitetracker.js</strong> or minified version and use it in your application. When we send your licence key via email, copy it and you have to manually overwrite the <strong>Licence Key: {your-license-key-here}</strong> line in software as given in image above.<br/><br/></div>
 
-                            <div><strong>Note:</strong> Money paid is not refundable even if you use it for 3 months and leave it in the rest of the year.<br/><br/></div>
+                            <div><strong>Note:</strong> Money paid is not refundable even if you use it for just 3 months and leave it in the rest of the year.<br/><br/></div>
 
                             <div><strong>Support: </strong>If you did not receive licence key even after 10 days from the date of payment or have any payment issues, <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSccM7md9rcalJOy-OhmWbrFtc0tN-AlZWKXipkU_4B4vSgM3g/viewform">contact us and get support</a></div>
                         </p>
