--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
                         TimeOnSite Tracker can be used for free without purchasing a licence key in following cases:
                         <ul>
                             <li>Using it in non-production environments like development, test, stage etc. (ex. <strong>http://testing.example.com</strong>)</li> and for testing purposes
-                            <li>It's free to use for non-profit organizations and educational universities but it cannot be embedded in other open-source software or
-                             libraries.</li>
+                            <li>It's free to use for non-profit organizations and educational universities but it cannot be embedded in other open-source software, commerical software and libraries since it is per-domain based licence model.</li>
                         </ul>
                     </p>
 
