Added release notes and removed footer from documentation main page

--- a/index.html
+++ b/index.html
@@ -253,12 +253,13 @@
                 </p>
 
                 <div>
-                    <h2>Key features of TimeOnSite Tracker</h2>
+                    <h2>Key features of TimeOnSite(TOS) Tracker</h2>
                     <ul>
                         <li>Measures user's time on site accurately</li>
                         <li>Provides analytics of page and content significance</li>
                         <li>Ignores inactive browser tab time to improve TOS metrics</li>
-                        <li>Simple configuration and customizable</li>
+                        <li>Easily configurable and highly customizable</li>
+                        <li>Tracks TOS data in <strong>Web</strong> and <strong>Mobile browsers</strong> efficiently</li>
                         <li>Readily available reporting & analytics application in PHP/NodeJs</li>
                     </ul>
                 </div>
