Replaced PNG image to JPEG in licence key image

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
                             <li>
                                 Valid licence key looks like the following, for example,<br/>
-                                <img src='images/licencekey_sample.png' style="margin: 5px;" alt='Licence key TimeOnSite Tracker'/>
+                                <img src='images/licencekey_sample.jpg' style="margin: 5px;" alt='Licence key TimeOnSite Tracker'/>
                             </li>
                         </ul>
 
