--- a/backend/index.html
+++ b/backend/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="TOS backend examples, server-side examples, examples with NodeJs and PHP, TimeOnSite tracking examples">
-    <meta name="keywords" content="Saving TOS to database, backend examples, server-side examples">
+    <meta name="keywords" content="Saving TOS to database, backend examples">
     <meta name="robot" content="index,follow">
-    <title>TimeonsiteTracker (TOS) - Saving TOS to database</title>
+    <title>Timeonsite Tracker | Saving TOS to database</title>
 
     <link rel="icon" type="image/ico" href="../images/tos_favicon.ico" sizes="16x16">
     <link rel="stylesheet" href="../stylesheets/styles.css">
