--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
-        <meta name="description" content="About TimeOnSite Tracker">
-        <meta name="keywords" content="timeonsite tracker, timeonsite intro, timeonsite web">
+        <meta name="description" content="Real-time demo on timeonsite tracker. Learn about its accuracy and features that helps web analytics.">
+        <meta name="keywords" content="real-time demo, timeonsite tracker">
         <meta name="robot" content="index,follow">
-        <title>Timeonsite Tracker</title>
+        <title>Timeonsite Tracker | Real-time demo</title>
         <link rel="icon" type="image/ico" href="images/tos_favicon.ico" sizes="16x16">
 
         <link rel="stylesheet" href="stylesheets/styles.css">
