Fixed incorrect relative path URL

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <script type="application/ld+json">
         {"name":"Timeonsite Tracker | Real-time demo","description":"Real-time demo on timeonsite tracker. Learn about its accuracy and features that helps web analytics.","@type":"WebSite","url":"http://saleemkce.github.io/timeonsite","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://saleemkce.github.io/timeonsite/assets/img/tos_coverimg.png"}},"headline":"Timeonsite Tracker | Real-time demo","@context":"http://schema.org"}</script>
 
-        <link rel="icon" type="image/ico" href="/assets/img/tos_favicon.ico" sizes="16x16">
+        <link rel="icon" type="image/ico" href="assets/img/tos_favicon.ico" sizes="16x16">
 
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="stylesheet" href="/assets/css/github-light.css">
-        <link rel="stylesheet" href="/assets/css/custom.css">
-        <link rel="stylesheet" href="/assets/css/tos_features.css">
-        <link rel="stylesheet" href="/assets/css/jquery-ui.1.12.1.css">
-        <link rel="stylesheet" href="/assets/css/sunburst.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/github-light.css">
+        <link rel="stylesheet" href="assets/css/custom.css">
+        <link rel="stylesheet" href="assets/css/tos_features.css">
+        <link rel="stylesheet" href="assets/css/jquery-ui.1.12.1.css">
+        <link rel="stylesheet" href="assets/css/sunburst.css">
         
 
         <style>
@@ -56,14 +56,14 @@
 
 
 
-        <script src="/assets/js/jquery.v1.12.0.min.js"></script>
-        <script src="/assets/js/jquery-ui.1.12.1.js"></script>
+        <script src="assets/js/jquery.v1.12.0.min.js"></script>
+        <script src="assets/js/jquery-ui.1.12.1.js"></script>
 
         <!-- timeonsitetracker -->
-        <script src="/assets/js/timeonsitetracker.js"></script>
+        <script src="assets/js/timeonsitetracker.js"></script>
 
         <!-- 
-            <script src="/assets/js/jquery.zoom.js"></script>
+            <script src="assets/js/jquery.zoom.js"></script>
          -->
 
         <script>
@@ -174,17 +174,17 @@
 
             <div class="overlay">
                 <p>
-                    <img src='/assets/img/tos_reports.png' style="margin: 5px;" alt='Time on site reports'/>
+                    <img src='assets/img/tos_reports.png' style="margin: 5px;" alt='Time on site reports'/>
                 </p>
             </div>
              <div class="overlay1">
                 <p>
-                    <img src='/assets/img/tos_analytics.png' style="margin: 5px;" alt='Time on site analytics'/>
+                    <img src='assets/img/tos_analytics.png' style="margin: 5px;" alt='Time on site analytics'/>
                 </p>
             </div>
 
             <section>
-                <img src='/assets/img/tos_coverimg.png' />
+                <img src='assets/img/tos_coverimg.png' />
             </section>
 
             <section>
@@ -258,7 +258,7 @@
                 </div>
 
                 <p style="display:inline-block;margin-top: 25px;">
-                    <img src='/assets/img/time_on_site_highlights.png' style="width: 100%;" alt='Time on site highlights'/>
+                    <img src='assets/img/time_on_site_highlights.png' style="width: 100%;" alt='Time on site highlights'/>
                 </p>
 
                 <div>
@@ -275,18 +275,18 @@
 
                 <!--  <p style="display: inline-block;margin-top: 25px;">
                 <span class='zoom' id='ex1'>
-                <img src='/assets/img/tos_reports.png' style="width: 100%;" alt='Time on site reports'/>
+                <img src='assets/img/tos_reports.png' style="width: 100%;" alt='Time on site reports'/>
                 </span>
                 </p> -->
                 <p>
                     <h2 style="text-decoration:dashed underline;">Reports & Analytics Dashboard <span class="download-app-info"><a href="https://github.com/saleemkce/visual">(Download it for free)</a></span></h2>
                     <p>
                         <h2>Reports Dashboard</h2>
-                        <img id="tosReportingImg" src='/assets/img/tos_reports.png' style="width: 100%;cursor: pointer;" alt='Time on site reports'/>
+                        <img id="tosReportingImg" src='assets/img/tos_reports.png' style="width: 100%;cursor: pointer;" alt='Time on site reports'/>
                     </p>
                     <p>
                         <h2>Analytics Dashboard</h2>
-                        <img id="tosReportingImg1" src='/assets/img/tos_analytics.png' style="width: 100%;cursor: pointer;" alt='Time on site analytics'/>
+                        <img id="tosReportingImg1" src='assets/img/tos_analytics.png' style="width: 100%;cursor: pointer;" alt='Time on site analytics'/>
                     </p>
                 </p>
 
@@ -312,7 +312,7 @@
 
                             <li>
                                 Valid licence key looks like the following, for example,<br/>
-                                <img src='/assets/img/licencekey_sample.jpg' style="margin: 5px;" alt='Licence key TimeOnSite Tracker'/>
+                                <img src='assets/img/licencekey_sample.jpg' style="margin: 5px;" alt='Licence key TimeOnSite Tracker'/>
                             </li>
                         </ul>
 
@@ -344,7 +344,7 @@
                 <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
             </footer>
         </div>
-        <script src="/assets/js/scale.fix.js"></script>
+        <script src="assets/js/scale.fix.js"></script>
     </body>
 </html>
 
